styles.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
    font-family: 'Epilogue', sans-serif;
}

:root {
    /* Colors */
    --almost-white: hsl(0, 0%, 98%);
    --medium-gray: hsl(0, 0%, 41%);
    --almost-black: hsl(0, 0%, 8%);

    /* Typography */
    --paragraph: 1.6rem;

    /* Font weights */
    --medium: 500;
    --bold: 700;
}

body {
    display: grid;
    justify-items: center;
}

/* HEADER */

header {
    min-width: 100%;
}

/* Navigation bar */

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    padding: 2rem;
}

.desktop-menu {
    display: none;
}

/* MAIN SECTION */

main {
    max-width: 60rem;
}

/* Main image */

.main-image {
    width: 100%;
    height: 30rem;
    background-image: url('./images/image-hero-mobile.png');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
/* Information section */

.main {
    padding: 4rem 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}

.main__title {
    font-size: 2.3rem;
    font-weight: var(--bold);
    color: var(--almost-black);
}

.main__text {
    font-size: var(--paragraph);
    font-weight: var(--medium);
    color: var(--medium-gray);
    text-align: center;
    line-height: 3rem;
}

.main__button button {
    height: 4.5rem;
    width: 14rem;
    background-color: var(--almost-black);
    color: var(--almost-white);
    border-style: none;
    border-radius: 1rem;
    font-size: var(--paragraph);
    font-weight: var(--bold);
    letter-spacing: .1rem;
    cursor: pointer;
}

/* FOOTER SECTION */

footer {
    max-width: 60rem;
}

.clients {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 2rem;
    gap: 2rem;
}

.clients div img{
    width: 7rem;
    height: auto;
    cursor: pointer;
}

/* Responsive - Desktop */

@media  screen and (min-width: 1200px) {

    /* Navigation bar */

    .navbar__menuicon {
        display: none;
    }

    .desktop-menu {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;
    }

    .desktop-menu__options {
        /* min-width: 50rem; */
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding-left: 5rem;
    }

    .desktop-menu__options ul,
    .desktop-menu__signup ul {
        display: flex;
        align-items: center;
        justify-content: space-between;
        list-style: none;
        font-size: 1.2rem;
        color: var(--medium-gray);
        cursor: pointer;
    }

    .desktop-menu__options ul li {
        padding-right: 5rem;
    }

    .desktop-menu__options ul li > img {
        padding-left: 1rem;
    }

    .desktop-menu__signup {
        width: 15rem;
    }
    
    .desktop-menu__signup button {
        width: 8rem;
        height: 4rem;
        color: var(--medium-gray);
        border-style: none;
        background-color: var(--almost-white);
        border: .1rem solid var(--medium-gray);
        border-radius: 1rem;
    }
}

/* You can do it */

